# SQLite-Clone

./: CMakeLists.txt  README.md
examples/: sample_queries.txt
src/: main.cpp  types.h
src/executor/: executor.cpp  executor.h
src/parser/: parser.cpp  parser.h
src/storage/: storage.cpp  storage.h
